--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="miglayout-3.5.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
